# SonjayOS

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  build-iso-simple.ps1  build-iso.bat  build-iso.ps1  docker-compose.yml  nginx.conf  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
config/hardware/: amd_rocm_config.sh  hardware_config.json
config/ubuntu/: sonjayos_config.json  ubuntu_24.04_config.sh
docs/: API文档.md  ISO构建指南.md  VMware开发环境设置.md  Windows11开发环境设置.md  Windows构建指南.md  开发文档.md  开发模式与生产模式.md  用户手册.md  硬件优化指南.md  项目总结.md
scripts/: dev-mode.sh  install.sh  prod-mode.sh  vmware-dev-setup.sh  vmware-dev-start.sh  windows-dev-setup.ps1  windows-dev-start.bat
scripts/monitor/: system_monitor.py
src/ai/: main.py
src/ai/embeddings/: semantic_search.py
src/ai/llama/: llama_integration.py
src/ai/whisper/: speech_recognition.py
src/dev_tools/: ai_code_completion.py
src/system/kernel/: ai_scheduler.py
src/system/security/: ai_security.py
src/tests/: __init__.py  test_ai_integration.py
src/ui/: main.py
src/ui/gnome/sonjayos-ai-assistant/: extension.js  metadata.json
src/ui/themes/: adaptive_theme.py
tools/iso-builder/: build-iso-windows.bat  build-iso.sh  build-sonjayos-iso.sh
